unpackaged/main/default/objects/Assignment_Setting__mdt/Assignment_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Assignment Setting</label>
    <pluralLabel>Assignment Settings</pluralLabel>
</CustomObject>