unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Name__c</fullName>
    <inlineHelpText>Name of the Assignment Group, Queue or User ID</inlineHelpText>
    <label>Assignment Name or ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>