unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment Group</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
                <isActive>false</isActive>
                <label>Queue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>