unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Business_Hour_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Business_Hour_Consideration__c</fullName>
    <label>Business Hour Consideration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within Business Hours</fullName>
                <default>true</default>
                <label>Within Business Hours</label>
            </value>
            <value>
                <fullName>Outside of Business Hours</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>