unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Enterprise2__c.field-meta.xml
<CustomField>
    <fullName>Enterprise2__c</fullName>
    <label>Enterprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>