unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise</label>
    <type>Checkbox</type>
</CustomField>