unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Max_Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Demographic_Score__c</fullName>
    <inlineHelpText>Enter a value or leave blank (if blank, it will apply to all values).</inlineHelpText>
    <label>Max Demographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>