unpackaged/main/default/objects/Assignment_Setting__mdt/fields/MQA_Brand__c.field-meta.xml
<CustomField>
    <fullName>MQA_Brand__c</fullName>
    <label>MQA Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LawPay</fullName>
                <default>true</default>
                <label>LawPay</label>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>