unpackaged/main/default/objects/Assignment_Setting__mdt/fields/MQL_Brand__c.field-meta.xml
<CustomField>
    <fullName>MQL_Brand__c</fullName>
    <inlineHelpText>Enter a value or leave blank (if blank, it will apply to all values).</inlineHelpText>
    <label>MQL Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AffiniPay</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>CASEpeer</fullName>
            </value>
            <value>
                <fullName>ClientPay</fullName>
            </value>
            <value>
                <fullName>CPACharge</fullName>
            </value>
            <value>
                <fullName>Docketwise</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>