unpackaged/main/default/objects/Assignment_Setting__mdt/fields/MQL_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>MQL_Product_Tier__c</fullName>
    <inlineHelpText>Enter a value or leave blank (if blank, it will apply to all values).</inlineHelpText>
    <label>MQL Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>LawPay Classic</fullName>
            </value>
            <value>
                <fullName>LawPay Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>