unpackaged/main/default/objects/Assignment_Setting__mdt/fields/MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type__c</fullName>
    <inlineHelpText>Enter a value or leave blank (if blank, it will apply to all values).</inlineHelpText>
    <label>MQL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Contact Request</fullName>
            </value>
            <value>
                <fullName>CSQL</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Score Threshold</fullName>
            </value>
            <value>
                <fullName>Self-Serve Sign Up</fullName>
            </value>
            <value>
                <fullName>Self-Serve Signup: Incomplete Application</fullName>
            </value>
            <value>
                <fullName>Self-Serve Signup: Missing Documents</fullName>
            </value>
            <value>
                <fullName>Self-Serve Signup: Upsell</fullName>
            </value>
            <value>
                <fullName>Sign Up</fullName>
            </value>
            <value>
                <fullName>Software Advice</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>