unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Opportunity_Brand__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Brand__c</fullName>
    <label>Opportunity Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AffiniPay</fullName>
            </value>
            <value>
                <fullName>CASEpeer</fullName>
            </value>
            <value>
                <fullName>ClientPay</fullName>
            </value>
            <value>
                <fullName>CPACharge</fullName>
            </value>
            <value>
                <fullName>Docketwise</fullName>
            </value>
            <value>
                <fullName>LawPay Payments</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
            <value>
                <fullName>LawPay Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>