unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Qualifying_Rep_Brand__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Brand__c</fullName>
    <label>Qualifying Rep Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASEpeer</fullName>
            </value>
            <value>
                <fullName>ClientPay</fullName>
            </value>
            <value>
                <fullName>CPACharge</fullName>
            </value>
            <value>
                <fullName>Docketwise</fullName>
            </value>
            <value>
                <fullName>LawPay</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Soluno</fullName>
            </value>
            <value>
                <fullName>Woodpecker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>