unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Qualifying_Rep_Team__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Team__c</fullName>
    <label>Qualifying Rep Team</label>
    <length>20</length>
    <type>Text</type>
</CustomField>