unpackaged/main/default/objects/Assignment_Setting__mdt/fields/Send_Slack_Alert__c.field-meta.xml
<CustomField>
    <fullName>Send_Slack_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Slack Alert?</label>
    <type>Checkbox</type>
</CustomField>