unpackaged/main/default/objects/Assignment_Setting__mdt/listViews/Opportunity.listView-meta.xml
<ListView>
    <fullName>Opportunity</fullName>
    <columns>MasterLabel</columns>
    <columns>Assignment_Type__c</columns>
    <columns>Assignment_Name__c</columns>
    <columns>Opportunity_Brand__c</columns>
    <columns>Qualifying_Rep_Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity</label>
</ListView>